<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background" >

     <TextView
        android:id="@+id/txtPhoneNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:gravity="right"
        android:padding="10dp"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/theme_text"
        android:textSize="38sp" />

    <TableLayout
        android:id="@+id/tableId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp" >

        <TableRow>

            <Button
                android:id="@+id/btnNum1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnNum2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnNum3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnNum4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnNum5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnNum6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnNum7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnNum8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnNum9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnAstrix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/astrix"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnNum0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnHash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hash"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnCall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/call"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>
    
     

</RelativeLayout>