<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@color/theme_background"
    android:orientation="vertical" >

    <TextView
        style="@style/Headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_headers"
        android:text="@string/register_header" />

    <TextView
        style="@style/register_page_text"
        android:padding="10dp"
        android:text="@string/enter_no"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        style="@style/register_page_text"
        android:padding="5dp"
        android:text="@string/press_continue"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/btnCountryCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/CountryCode" />

        <EditText
            android:id="@+id/etAddPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="phone" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        style="@style/register_page_btn"
        android:text="@string/txt_btn_Continue" />

    <TextView
        style="@style/register_page_text"
        android:padding="5dp"
        android:text="@string/txt_validation_sent"
        android:textSize="12sp" />

    <TextView
        style="@style/register_page_text"
        android:padding="5dp"
        android:text="@string/txt_mobile_safe"
        android:textSize="12sp" />

    <include layout="@layout/progress_dialog_custom" />

</LinearLayout>