<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background" >

    <LinearLayout
        android:id="@+id/firstTimeLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/NoMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/txtNoMsg"
            android:textColor="#6F56C2"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/chat" />

        <TextView
            android:id="@+id/MoreContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/txtMoreContacts"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/ComposeMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/athome_theme_button"
            android:text="@string/txtCompose"
            android:textColor="@color/WhiteSmoke" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvMsgLogs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:divider="@color/theme_headers"
        android:dividerHeight="0.1dp" >
    </ListView>

</RelativeLayout>