<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@color/theme_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_margin="10dp"
        android:textColor="@color/theme_text"
        android:text="@string/txtSipUserName" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:textColor="@color/theme_sub_header_text"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtSipDomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/theme_text"
        android:text="@string/txtSipDomain" />

    <EditText
        android:id="@+id/etSipDomain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/theme_sub_header_text"
        android:inputType="textWebEmailAddress"
        android:ems="10" />

    <TextView
        android:id="@+id/txtSipPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/theme_text"
        android:text="@string/txtSipPassword" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/theme_sub_header_text"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="SIP Setup" 
        android:layout_gravity="center_horizontal"/>

</LinearLayout>