<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/album_item"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/theme_background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/generic_icon" />

    <LinearLayout
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/profileImage"
        android:layout_alignBottom="@id/profileImage"
        android:background="#70000000"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txtContactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Raghunath Kumar"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/callStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactName"
        android:background="@color/theme_headers"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txtCallStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCallStatus"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/btnTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp" >

        <TableRow>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/custom_button_selector"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnMute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/mute" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtMute"
                    android:textColor="@color/theme_sub_header_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/custom_button_selector"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnHold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/hold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHold"
                    android:textColor="@color/theme_sub_header_text" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/custom_button_selector"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnSpeaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/speaker" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtSpeaker"
                    android:textColor="@color/theme_sub_header_text" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnEndcall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@color/red"
                android:contentDescription="@string/app_name"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:src="@drawable/callend" />
        </TableRow>
    </TableLayout>

</RelativeLayout>